# tlsum

./: Cargo.toml  LICENSE  README.md  justfile
benches/: anonimized-timelog.txt  benchmark.rs
src/: lib.rs  main.rs
